<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="0dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/back_drawer"
            android:contentDescription="@string/content_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_margin"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/main_heading"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lly_withoutguest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/nav_login"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:gravity="center_vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_login"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_margin"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/heading" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/nav_about"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_info"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_margin"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/about_us"
                android:textColor="@color/white"
                android:textSize="@dimen/heading" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_contact"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_contact_us"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_margin"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/heading" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_logout"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_logout"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_margin"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/heading" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>