<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/back_drawer"
            android:contentDescription="@string/content_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_margin"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/main_heading"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lly_withoutguest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/nav_login"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:background="@drawable/background_round_padded"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_login"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_margin"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/heading" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:background="@drawable/background_round_padded"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_home"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_margin"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:background="@drawable/background_round_padded"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_profile"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_margin"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="@dimen/heading" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/nav_test_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:background="@drawable/background_round_padded"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_testdrive"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_margin"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/test_drive_booking"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:background="@drawable/background_round_padded"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_carbooking"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_margin"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/booking"
                android:textColor="@color/white"
                android:textSize="@dimen/heading" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:background="@drawable/background_round_padded"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_logout"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_margin"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/heading" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>