<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner_top_left"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/idSV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/edit_text_design"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="@dimen/_3sdp"
                android:elevation="@dimen/_8sdp"
                android:hint="Search Car"
                android:iconifiedByDefault="false"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_3sdp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/top_brands"
                android:textColor="@color/teal"
                android:textSize="@dimen/main_heading"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/top_margin"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtViewAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:fontFamily="@font/nunito_regular"
                android:textAlignment="textEnd"
                android:text="@string/view_all_cars"
                android:textColor="@color/teal"
                android:textSize="@dimen/main_heading"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/top_cars"
                android:textColor="@color/teal"
                android:textSize="@dimen/main_heading"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTopCars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/top_margin"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/hot_deals"
                android:textColor="@color/teal"
                android:textSize="@dimen/main_heading"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerNewAdded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/top_margin"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/progressBar"
        layout="@layout/progress_dialog_layout" />

</RelativeLayout>